Fix wrong alignment on bootstrap_forums_skin when comment author is anonymous

--- a/skins/bootstrap_forums_skin/style.less
+++ b/skins/bootstrap_forums_skin/style.less
@@ -213,6 +213,10 @@ ol.breadcrumb {
 		img {
 			.border-radius(3px);
 		}
+		.ft_author_avatar {
+			float: none;
+			margin-right: 0;
+		}
 	}
 	.ft_comment_response {
 		h3 {
